modified confirm email and receive forget password To verificationCode
