# app/routes/settings.routes.js
@@ -13,7 +13,8 @@ module.exports = function(app) {
 
   app.post("/settings/changePassword",[authJwt.verifyToken, verifySignUp.checkStrenghtOfPassword],controller.changePassword);
   app.post("/settings/forgetPassword",controller.sendForgetPasswordEmail);
-  app.get("/settings/forgetPassword/:emailtoken" ,controller.receiveForgetPasswordEmail);
+  app.post("/settings/receiveforgetPassword" ,controller.receiveForgetPasswordEmail);
+  //app.get("/settings/forgetPassword/:emailtoken" ,controller.receiveForgetPasswordEmail);
   app.post("/settings/resetForgetPassword",[authJwt.verifyToken,verifySignUp.checkStrenghtOfPassword],controller.resetForgetPassword);
   app.put("/settings/deactivateAccount", authJwt.verifyToken, controller.deactivateAccount);
   app.put("/settings/reactivateAccount", authJwt.verifyToken, controller.reactivateAccount);
