# swagger-output.json
@@ -178,23 +178,26 @@
         }
       }
     },
-    "/auth/confirmation/{emailtoken}": {
-      "get": {
+    "/auth/confirmation": {
+      "post": {
         "description": "",
         "parameters": [
           {
-            "name": "emailtoken",
-            "in": "path",
-            "required": true,
-            "type": "string"
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "verificationCode": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -282,23 +285,26 @@
         }
       }
     },
-    "/settings/forgetPassword/{emailtoken}": {
-      "get": {
+    "/settings/receiveforgetPassword": {
+      "post": {
         "description": "",
         "parameters": [
           {
-            "name": "emailtoken",
-            "in": "path",
-            "required": true,
-            "type": "string"
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "verificationCode": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
